# backend/cmd/server/api.go
@@ -27,6 +27,7 @@ type storeAPI interface {
 	OrderDetail(context.Context, string) (store.OrderDetail, error)
 	OrderStats(context.Context, store.OrderFilters) (store.OrderStatsResult, error)
 	OrderModels(context.Context, string) (store.OrderModelsResult, error)
+	OrderCustomerIDs(context.Context) (store.OrderCustomerIDsResult, error)
 	ViewList(context.Context, string, store.ViewFilters, int, int, bool) (store.ViewListResult, error)
 	ViewListAll(context.Context, string, store.ViewFilters) (store.ViewListResult, error)
 	ViewBOMStream(context.Context, store.ViewFilters, io.Writer) error
